# gbayes

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci-cd.yml
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/gbayes/: index.rst.txt
_sources/autoapi/gbayes/gbayes/: index.rst.txt
autoapi/: index.html
autoapi/gbayes/: index.html
autoapi/gbayes/gbayes/: index.html
docs/: Makefile  conf.py  make.bat
src/gbayes/: __init__.py  gbayes.py
tests/: test_gbayes.py
